# latex-autocompile

./: README.org  shakes.cabal  stack.yaml
src/: build-slides.hs
