name:                shakes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mattoxb/shakes#readme
license:             BSD3
license-file:        LICENSE
author:              Mattox Beckman
maintainer:          mattox@illinois.edu
copyright:           2018
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org

executable build-slides
  hs-source-dirs:      src
  main-is:             build-slides.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 
                     , shake
                     , directory
